[package]
name = "tree-sitter-refal"
description = "refal grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "refal"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ilya-klyuchnikov/tree-sitter-refal"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25.3"

[build-dependencies]
cc = "1.0"
